adapting the smallscreen display to the #sideNav: - #innerMain gets flex-direction:column on smallscreens to display   #sideNav above #itemsList - removing .sideNavClones its &.wrapper class - .toggle-topbar also toggle sideNav   (.toggle-topbar being only visible on small screens, there is no need   to make this action media-specific) - hidding the breadcrumbs for now on small screens as it was looking like   an action button which it isn't yet. - also removing #inventorySections slideDown effect to avoid changing   it's display to visible - moving data-options="sticky_on: large" to where it belongs:   the nav element

--- a/app/modules/inventory/scss/_inventory.scss
+++ b/app/modules/inventory/scss/_inventory.scss
@@ -8,6 +8,8 @@ $tabs-navigation-font-color: #fff;
 
 
 #innerMain{
+  // needed by Chrome (at least) to expand items on the whole page
+  width: 100%;
   @include flex(row);
   // sideNavClones #sideNav and #shadowSideNav
   // have the same behavior but the later
@@ -26,9 +28,6 @@ $tabs-navigation-font-color: #fff;
     .sideNavClones{
       width: 250px;
       @include transition(width);
-      &.wrapped{
-        width: 50px;
-      }
     }
   }
 }
@@ -36,13 +35,8 @@ $tabs-navigation-font-color: #fff;
 /*Small screens*/
 @media screen and (max-width: $smallscreen) {
   #innerMain{
-    .sideNavClones{
-      width: 90vw;
-      max-width: 250px;
-      &.wrapped{
-        display: hidden
-      }
-    }
+    flex-direction: column;
+    .sideNavClones{}
   }
 }
 
